# cognosaurus

./: .firebaserc  .gitignore  Dockerfile  Pipfile  README.org  docker-compose.yml  firebase.json  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt  schema.yml  tox.ini
.github/workflows/: cognosaurus.yaml
benchmarks/: iconcat-db.txt  iconcat.txt  old-db.txt  pseudo-async-async-db.txt  sync.txt
benchmarks/many-short-requests/pseudo-async/: aioredis-v2.txt  base-db.txt
benchmarks/one-big-request/: lambda-gather.txt  only-sync.txt  partial-gather.txt  v0.2.0.txt
benchmarks/pseudo-async/: base.txt
cognosaurus/: asgi.py  settings.py  urls.py  wsgi.py
cognosaurus/api/: models.py  serializers.py  views.py
cognosaurus/api/tests/: test_models.py
cognosaurus/api/tests/e2e/: test_api.py
cognosaurus/api/tests/integration/: test_api.py
cognosaurus/api/tests/performance/: code_for_e2e_test.py  code_for_test.py  code_for_test_big_request.py  test_api_e2e.py  test_api_with_db.py  test_api_without_db.py
cognosaurus/api/tests/unit/: test_models.py
cognosaurus/scripts/: download_CogNetv2.0.sh
scripts/: import_tsv_file_into_redis_server.py  integration-tests.sh  run-all-tests.sh  run-e2e-tests.sh  run-integration-tests.sh  run-performance-tests.sh  run-unit-tests.sh
