[build-system]
requires = [ "setuptools >= 35.0.2", "wheel >= 0.29.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 85

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py{36,37}-{functional,performance}
isolated_build = True

[testenv]
deps = -rrequirements-dev.txt
commands =
    pytest {posargs}
passenv =
    SECRET_KEY
    HOST
    PORT
    REDIS_HOST
    REDIS_PORT
setenv =
    DJANGO_SETTINGS_MODULE = cognosaurus.settings
"""